--- a/portfolio.html
+++ b/portfolio.html
@@ -3,19 +3,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Document</title>
-    <a href="./css/styles.css"></a>
   </head>
-  <body>
+  <body class="page">
     <!--Шапка сайту-->
-    <header>
+    <header class="page-header">
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="logo">WebStudio</a>
 
-        <ul>
-          <li><a href="">Студія</a></li>
-          <li><a href="">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+        <ul class="site-nav">
+          <li><a href="" class="link">Студія</a></li>
+          <li><a href="" class="link">Портфоліо</a></li>
+          <li><a href="" class="link">Контакти</a></li>
         </ul>
       </nav>
 
