added colors for css

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <a href="./index.html">WebStudio</a>
 
         <ul>
-          <li><a href="">Студія</a></li>
-          <li><a href="">Портфоліо</a></li>
+          <li><a href="./index.html">Студія</a></li>
+          <li><a href="./portfolio.html">Портфоліо</a></li>
           <li><a href="">Контакти</a></li>
         </ul>
       </nav>
@@ -41,19 +41,30 @@
         <ul>
           <li>
             <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+            <p>
+              Ідейні міркування, і навіть початок повсякденної роботи з
+              формування позиції.
+            </p>
           </li>
           <li>
             <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            <p>
+              Завдання організації, особливо рамки і місце навчання кадрів тягне
+              у себе.
+            </p>
           </li>
           <li>
             <h3>ПЛАНУВАННЯ</h3>
-            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+            <p>
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
           </li>
           <li>
             <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            <p>
+              Значимість цих проблем настільки очевидна, що реалізація планових
+              завдань.
+            </p>
           </li>
         </ul>
       </section>
@@ -63,13 +74,25 @@
         <h2>Чим ми займаємося</h2>
         <ul>
           <li>
-            <img src="./images/image_1.jpg" alt="людина друкує код на планшеті" width="370" />
+            <img
+              src="./images/image_1.jpg"
+              alt="людина друкує код на планшеті"
+              width="370"
+            />
           </li>
           <li>
-            <img src="./images/image_2.jpg" alt="людина створює дизайн смартфона" width="370" />
+            <img
+              src="./images/image_2.jpg"
+              alt="людина створює дизайн смартфона"
+              width="370"
+            />
           </li>
           <li>
-            <img src="./images/image_3.jpg" alt="людина підбирає колір на планшеті" width="370" />
+            <img
+              src="./images/image_3.jpg"
+              alt="людина підбирає колір на планшеті"
+              width="370"
+            />
           </li>
         </ul>
       </section>
@@ -78,7 +101,11 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="./images/img_Igor.jpg" alt="Ігор Дем'яненко" width="270" />
+            <img
+              src="./images/img_Igor.jpg"
+              alt="Ігор Дем'яненко"
+              width="270"
+            />
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
@@ -88,12 +115,20 @@
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/img_Mykola.jpg" alt="Микола Тарасов" width="270" />
+            <img
+              src="./images/img_Mykola.jpg"
+              alt="Микола Тарасов"
+              width="270"
+            />
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/img_Mykhailo.jpg" alt="Михайло Єрмаков" width="270" />
+            <img
+              src="./images/img_Mykhailo.jpg"
+              alt="Михайло Єрмаков"
+              width="270"
+            />
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
