--- a/portfolio.html
+++ b/portfolio.html
@@ -3,44 +3,53 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/common.css" />
+    <link rel="stylesheet" href="./css/main.css" />
     <title>Document</title>
   </head>
   <body class="page">
     <!--Шапка сайту-->
     <header class="page-header">
       <nav>
-        <a href="./index.html" class="logo">WebStudio</a>
+        <a href="./index.html" class="header-logo">WebStudio</a>
 
-        <ul class="site-nav">
-          <li><a href="" class="link">Студія</a></li>
-          <li><a href="" class="link">Портфоліо</a></li>
+        <ul class="site-nav list">
+          <li><a href="./index.html" class="link">Студія</a></li>
+          <li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
           <li><a href="" class="link">Контакти</a></li>
         </ul>
       </nav>
 
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="contacts list">
+        <li>
+          <a href="mailto:info@devstudio.com" class="contacts-link"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:+380961111111" class="contacts-link"
+            >+38 096 111 11 11</a
+          >
+        </li>
       </ul>
     </header>
     <!--Портфоліо-->
     <main>
       <section>
         <h1>Портфоліо</h1>
-        <button type="button">Все</button>
-        <button type="button">Веб-сайти</button>
-        <button type="button">Додатки</button>
-        <button type="button">Дизайн</button>
-        <button type="button">Маркетинг</button>
+        <button type="button" class="button">Все</button>
+        <button type="button" class="button">Веб-сайти</button>
+        <button type="button" class="button">Додатки</button>
+        <button type="button" class="button">Дизайн</button>
+        <button type="button" class="button">Маркетинг</button>
       </section>
 
       <section>
-        <ul>
+        <ul class="portfolio list">
           <li>
             <img src="./images/Portfolio/img.jpg" alt="Технокряк" width="370" />
             <h2>Технокряк</h2>
-            <p>Веб-сайт</p>
+            <p class="portfolio-paragraph">Веб-сайт</p>
           </li>
           <li>
             <img
@@ -49,7 +58,7 @@
               width="370"
             />
             <h2>Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
+            <p class="portfolio-paragraph">Дизайн</p>
           </li>
           <li>
             <img
@@ -58,7 +67,7 @@
               width="370"
             />
             <h3>Ресторан Seafood</h3>
-            <p>Додаток</p>
+            <p class="portfolio-paragraph">Додаток</p>
           </li>
           <li>
             <img
@@ -67,7 +76,7 @@
               width="370"
             />
             <h3>Проєкт Prime</h3>
-            <p>Маркетинг</p>
+            <p class="portfolio-paragraph">Маркетинг</p>
           </li>
           <li>
             <img
@@ -76,7 +85,7 @@
               width="370"
             />
             <h3>Проєкт Boxes</h3>
-            <p>Додаток</p>
+            <p class="portfolio-paragraph">Додаток</p>
           </li>
           <li>
             <img
@@ -85,7 +94,7 @@
               width="370"
             />
             <h3>Inspiration has no Borders</h3>
-            <p>Веб-сайт</p>
+            <p class="portfolio-paragraph">Веб-сайт</p>
           </li>
           <li>
             <img
@@ -94,7 +103,7 @@
               width="370"
             />
             <h3>Видання Limited Edition</h3>
-            <p>Дизайн</p>
+            <p class="portfolio-paragraph">Дизайн</p>
           </li>
           <li>
             <img
@@ -103,7 +112,7 @@
               width="370"
             />
             <h3>Проект LAB</h3>
-            <p>Маркетинг</p>
+            <p class="portfolio-paragraph">Маркетинг</p>
           </li>
           <li>
             <img
@@ -112,20 +121,32 @@
               width="370"
             />
             <h3>Growing Business</h3>
-            <p>Додаток</p>
+            <p class="portfolio-paragraph">Додаток</p>
           </li>
         </ul>
       </section>
     </main>
     <!--Футер-->
-    <footer>
-      <a href="./index.html"> WebStudio </a>
+    <footer class="footer">
+      <a href="./index.html" class="footer-logo"> WebStudio </a>
 
       <address>
-        <ul>
-          <li><a href="">м. Київ, пр-т Лесі Українки, 26</a></li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="address list">
+          <li>
+            <a href="" class="address-hyperlink"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="address-link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380961111111" class="address-link"
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
       </address>
     </footer>
