--- a/portfolio.html
+++ b/portfolio.html
@@ -3,15 +3,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/main.css" />
-    <title>Document</title>
   </head>
   <body class="page">
     <!--Шапка сайту-->
     <header class="page-header">
       <nav>
-        <a href="./index.html" class="header-logo">WebStudio</a>
+        <a href="./index.html" class="header-logo">
+          <span class="accent">Web</span>Studio</a
+        >
 
         <ul class="site-nav list">
           <li><a href="./index.html" class="link">Студія</a></li>
@@ -36,19 +44,21 @@
     <!--Портфоліо-->
     <main>
       <section>
-        <h1>Портфоліо</h1>
-        <button type="button" class="button">Все</button>
-        <button type="button" class="button">Веб-сайти</button>
-        <button type="button" class="button">Додатки</button>
-        <button type="button" class="button">Дизайн</button>
-        <button type="button" class="button">Маркетинг</button>
+        <h1 class="primary-title">Портфоліо</h1>
+        <ul class="buttons list">
+          <li><button type="button" class="button">Усі</button></li>
+          <li><button type="button" class="button">Веб-сайти</button></li>
+          <li><button type="button" class="button">Додатки</button></li>
+          <li><button type="button" class="button">Дизайн</button></li>
+          <li><button type="button" class="button">Маркетинг</button></li>
+        </ul>
       </section>
 
       <section>
         <ul class="portfolio list">
           <li>
             <img src="./images/Portfolio/img.jpg" alt="Технокряк" width="370" />
-            <h2>Технокряк</h2>
+            <h2 class="portfolio-title">Технокряк</h2>
             <p class="portfolio-paragraph">Веб-сайт</p>
           </li>
           <li>
@@ -57,7 +67,7 @@
               alt="Постер New Orlean vs Golden Star"
               width="370"
             />
-            <h2>Постер New Orlean vs Golden Star</h2>
+            <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
             <p class="portfolio-paragraph">Дизайн</p>
           </li>
           <li>
@@ -66,7 +76,7 @@
               alt="Ресторан Seafood"
               width="370"
             />
-            <h3>Ресторан Seafood</h3>
+            <h2 class="portfolio-title">Ресторан Seafood</h2>
             <p class="portfolio-paragraph">Додаток</p>
           </li>
           <li>
@@ -75,7 +85,7 @@
               alt="Проєкт Prime"
               width="370"
             />
-            <h3>Проєкт Prime</h3>
+            <h2 class="portfolio-title">Проєкт Prime</h2>
             <p class="portfolio-paragraph">Маркетинг</p>
           </li>
           <li>
@@ -84,7 +94,7 @@
               alt="Проєкт Boxes"
               width="370"
             />
-            <h3>Проєкт Boxes</h3>
+            <h2 class="portfolio-title">Проєкт Boxes</h2>
             <p class="portfolio-paragraph">Додаток</p>
           </li>
           <li>
@@ -93,7 +103,7 @@
               alt="Inspiration has no Borders"
               width="370"
             />
-            <h3>Inspiration has no Borders</h3>
+            <h2 class="portfolio-title">Inspiration has no Borders</h2>
             <p class="portfolio-paragraph">Веб-сайт</p>
           </li>
           <li>
@@ -102,7 +112,7 @@
               alt="Видання Limited Edition"
               width="370"
             />
-            <h3>Видання Limited Edition</h3>
+            <h2 class="portfolio-title">Видання Limited Edition</h2>
             <p class="portfolio-paragraph">Дизайн</p>
           </li>
           <li>
@@ -111,7 +121,7 @@
               alt="Проект LAB"
               width="370"
             />
-            <h3>Проект LAB</h3>
+            <h2 class="portfolio-title">Проект LAB</h2>
             <p class="portfolio-paragraph">Маркетинг</p>
           </li>
           <li>
@@ -120,7 +130,7 @@
               alt="Growing Business"
               width="370"
             />
-            <h3>Growing Business</h3>
+            <h2 class="portfolio-title">Growing Business</h2>
             <p class="portfolio-paragraph">Додаток</p>
           </li>
         </ul>
@@ -128,7 +138,9 @@
     </main>
     <!--Футер-->
     <footer class="footer">
-      <a href="./index.html" class="footer-logo"> WebStudio </a>
+      <a href="./index.html" class="footer-logo">
+        <span class="accent">Web</span>Studio
+      </a>
 
       <address>
         <ul class="address list">
