--- a/index.html
+++ b/index.html
@@ -5,63 +5,86 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
-  <body>
+  <body class="page">
     <!--Шапка сайту-->
-    <header>
+    <header class="page-header">
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="header-logo"
+          ><span class="accent">Web</span>Studio</a
+        >
 
-        <ul>
-          <li><a href="./index.html">Студія</a></li>
-          <li><a href="./portfolio.html">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+        <ul class="site-nav list">
+          <li><a href="./index.html" class="link current">Студія</a></li>
+          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+          <li><a href="" class="link">Контакти</a></li>
         </ul>
       </nav>
 
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="contacts list">
+        <li>
+          <a href="mailto:info@devstudio.com" class="contacts-link"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:+380961111111" class="contacts-link"
+            >+38 096 111 11 11</a
+          >
+        </li>
       </ul>
     </header>
 
     <!--Основний контент-->
-    <main>
+    <main class="main">
       <!--Головний герой-->
       <div>
-        <section>
+        <section class="title">
           <h1>Ефективні рішення для вашого бізнесу</h1>
-          <button type="button">Замовити послугу</button>
+          <ul class="buttons list">
+            <li>
+              <button type="button" class="button-title">
+                Замовити послугу
+              </button>
+            </li>
+          </ul>
         </section>
       </div>
 
       <!--Ocoбливості-->
-      <section>
-        <h2>Ocoбливості</h2>
-        <ul>
+      <section class="blablalba">
+        <h2 class="primary-title">Ocoбливості</h2>
+        <ul class="features list">
           <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>
+            <h3 class="features-title">Увага до деталей</h3>
+            <p class="features-paragraph">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <p>
+            <h3 class="features-title">Пунктуальність</h3>
+            <p class="features-paragraph">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-            <h3>ПЛАНУВАННЯ</h3>
-            <p>
+            <h3 class="features-title">Планування</h3>
+            <p class="features-paragraph">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>
+            <h3 class="features-title">Сучасні технології</h3>
+            <p class="features-paragraph">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
@@ -71,23 +94,23 @@
 
       <!--Чим ми займаємося-->
       <section>
-        <h2>Чим ми займаємося</h2>
-        <ul>
-          <li>
+        <h2 class="works-title">Чим ми займаємося</h2>
+        <ul class="works">
+          <li class="works-images list">
             <img
               src="./images/image_1.jpg"
               alt="людина друкує код на планшеті"
               width="370"
             />
           </li>
-          <li>
+          <li class="works-images list">
             <img
               src="./images/image_2.jpg"
               alt="людина створює дизайн смартфона"
               width="370"
             />
           </li>
-          <li>
+          <li class="works-images list">
             <img
               src="./images/image_3.jpg"
               alt="людина підбирає колір на планшеті"
@@ -97,22 +120,22 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
+      <section class="team">
+        <h2 class="works-title">Наша команда</h2>
+        <ul class="team-index list">
           <li>
             <img
               src="./images/img_Igor.jpg"
               alt="Ігор Дем'яненко"
               width="270"
             />
-            <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+            <h3 class="team-title">Ігор Дем'яненко</h3>
+            <p class="team-paragraph">Product Designer</p>
           </li>
           <li>
             <img src="./images/img_Olga.jpg" alt="Ольга Рєпіна" width="270" />
-            <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-title">Ольга Рєпіна</h3>
+            <p class="team-paragraph">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -120,8 +143,8 @@
               alt="Микола Тарасов"
               width="270"
             />
-            <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="team-title">Микола Тарасов</h3>
+            <p class="team-paragraph">Marketing</p>
           </li>
           <li>
             <img
@@ -129,22 +152,36 @@
               alt="Михайло Єрмаков"
               width="270"
             />
-            <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+            <h3 class="team-title">Михайло Єрмаков</h3>
+            <p class="team-paragraph">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
     <!--Футер-->
-    <footer>
-      <a href="./index.html"> WebStudio </a>
+    <footer class="footer">
+      <a href="./index.html" class="footer-logo">
+        <span class="accent">Web</span>Studio
+      </a>
 
       <address>
-        <ul>
-          <li><a href="">м. Київ, пр-т Лесі Українки, 26</a></li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="address list">
+          <li>
+            <a href="" class="address-hyperlink"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="address-link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380961111111" class="address-link"
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
       </address>
     </footer>
