--- a/portfolio.html
+++ b/portfolio.html
@@ -8,10 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body class="page">
@@ -43,7 +42,7 @@
       </ul>
     </header>
     <!--Портфоліо-->
-    <main>
+    <main class="main">
       <section>
         <h1 class="primary-title">Портфоліо</h1>
         <ul class="buttons list">
@@ -53,9 +52,6 @@
           <li><button type="button" class="button">Дизайн</button></li>
           <li><button type="button" class="button">Маркетинг</button></li>
         </ul>
-      </section>
-
-      <section>
         <ul class="portfolio list">
           <li>
             <img src="./images/Portfolio/img.jpg" alt="Технокряк" width="370" />
