font-size edits

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
     </header>
 
     <!--Основний контент-->
-    <main class="main">
+    <main>
       <!--Головний герой-->
       <div>
         <section class="title">
-          <h1>Ефективні рішення для вашого бізнесу</h1>
+          <h1 class="title-header">Ефективні рішення для вашого бізнесу</h1>
           <ul class="buttons list">
             <li>
               <button type="button" class="button-title">
